lang/tests/compile_fail/accounts_type_generic.stderr
error: #[derive(Accounts)] only supports lifetime parameters; type parameters are not supported
 --> tests/compile_fail/accounts_type_generic.rs:5:37
  |
5 | pub struct BadGenericAccount<'info, T> {
  |                                     ^
